Feat: criando metodo de update category
