# app/controllers/CategoriesController.ts
@@ -1,5 +1,5 @@
 import type { HttpContext } from '@adonisjs/core/http'
-import { CreateCategoryValidator, CategoryFiltersValidator } from '#validators/CategoryValidator'
+import { CreateCategoryValidator, CategoryFiltersValidator, UpdateCategoryValidator } from '#validators/CategoryValidator'
 import { CategoryService } from '#services/CategoryService'
 // Usar respostas nativas do Adonis via `response`
 
@@ -22,34 +22,37 @@ export default class CategoriesController {
   async index({ request, response }: HttpContext) {
     try {
       const filters = await request.validateUsing(CategoryFiltersValidator)
-      const categories = await this.categoryService.getList(filters)
+      const categories = await this.categoryService.geCategoriestList(filters)
 
       return response.ok(categories)
     } catch (error) {
-      return response.status(500).json({ error: error })
+      return response.internalServerError({ error: error })
     }
   }
 
   /**
-   * Handle form submission for the create action
+   * @store
+   * @operationId createCategory
+   * @description Cria uma categoria
+   * @requestBody <CreateCategoryValidator>
+   * @responseBody 200 - <Category[]>.with(relations) - Retorna a categoria criada
+   * @paramUse(sortable, filterable)
+   * @responseHeader 200 - @use(paginated)
+   * @responseHeader 200 - X-pages - A description of the header - @example(test)
    */
   async store({ request, response }: HttpContext) {
     try {
       const payload = await request.validateUsing(CreateCategoryValidator)
 
-      if (!payload) {
-        return response.status(400).json({ error: 'Invalid category data' })
-      }
+      if (!payload) return response.badRequest({ error: 'Invalid category data' })
 
       const category = await this.categoryService.createCategory(payload)
 
-      if (category) {
-        return response.status(201).json({ data: category })
-      }
+      if (category) return response.created({ data: category })
 
-      return response.status(500).json({ error: 'Failed to create category' })
+      return response.internalServerError({ error: 'Failed to create category' })
     } catch (error) {
-      return response.status(500).json({ error: error })
+      return response.internalServerError({ error: error })
     }
   }
 
@@ -59,9 +62,31 @@ export default class CategoriesController {
   async show({}: HttpContext) {}
 
   /**
-   * Handle form submission for the edit action
+   * @update
+   * @operationId updateCategory
+   * @description Atualiza uma categoria
+   * @requestBody <UpdateCategoryValidator>
+   * @responseBody 200 - <Category[]>.with(relations) - Retorna a categoria atualizada
+   * @paramUse(sortable, filterable)
+   * @responseHeader 200 - @use(paginated)
+   * @responseHeader 200 - X-pages - A description of the header - @example(test)
    */
-  async update({}: HttpContext) {}
+  async update({ request, response }: HttpContext) {
+    try{
+      const payload = await request.validateUsing(UpdateCategoryValidator)
+      const id = Number.parseInt(request.param('id'), 10) ?? 0
+
+      if (!payload || !id ) return response.badRequest({ error: 'Invalid category data' })
+
+      const category = await this.categoryService.updateCategory(payload, id)
+
+      if(category) return response.ok({ data: category })
+
+      return response.internalServerError({ error: 'Failed to update category' })
+    } catch (error) {
+      return response.internalServerError({ error: error })
+    }
+  }
 
   /**
    * Delete record
