# app/dtos/categoryDto.ts
@@ -1,0 +1,11 @@
+export interface CreateCategoryDTO{
+    name: string
+    parent_id?: number
+}
+
+export interface UpdateCategoryDTO{
+    name: string
+    slug?: string
+    parent_id?: number
+    status?: number
+}
